# gfl

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_scalar_fused_lasso.py
src/gfl/: __init__.py  _types.py  typing.py
src/gfl/core/: _builder.py  _group_stats.py  _ols.py  _structure.py  _weights.py  scalar_fused_lasso.py
src/gfl/utils/: __init__.py  _encoding.py  _uf.py  validation.py
tests/: test_builder.py  test_check_fusion_pairs.py  test_check_groups.py  test_check_groups_and_pairs.py  test_gfl_structure.py  test_group_data.py  test_group_encoding.py  test_groupwise_ols.py  test_scalar_fused_lasso.py  test_uf.py  test_weights.py
