[build-system]
requires = [
    "setuptools>=68", "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "gfl"
version = "0.1.0"
description = "Generalized fused lasso solvers via coordinate descent"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

authors = [
    { name = "Obed Amo", email = "obedamo9.ao@gmail.com" },
]

keywords = [
    "fused lasso",
    "coordinate descent",
    "optimization",
    "machine learning",
    "statistics",
]

dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
]

[tool.setuptools.packages.find]
where = ["src"]


